feat(backend): per-user categories, budgets, server-side search, CSV and recurring
Categories are now owned by a user. They were global: every account saw one
shared list and could rename or delete entries belonging to everyone else.
New accounts are seeded with eight starter categories so the app is usable
immediately, and a category still referenced by transactions cannot be
deleted out from under them.

Transactions are searched, filtered, sorted and paged in the database via
a JPA Specification. The frontend previously downloaded every transaction
and filtered in memory, which stops working past a few thousand rows.

Adds monthly per-category budgets. A budget stores only its limit; spend
is derived from the transactions of whichever month is requested, so past
months stay truthful when a limit changes.

Adds CSV import and export. The parser handles quoted fields, embedded
commas, escaped quotes, several date layouts, thousands separators and
parenthesised negatives, and reports bad rows individually rather than
rejecting an entire bank statement over one line.

Adds recurring transactions with a nightly sweep. Generation steps one
period at a time, so a rule left dormant produces every entry it missed
instead of a single lump, bounded per run so a long-dormant daily rule
cannot generate unboundedly in one request.

Supporting changes:

* Money moves from double to BigDecimal. Doubles cannot represent most
  decimal fractions and drift once totals are summed.
* Transaction dates move from java.util.Date to LocalDate.
* A @RestControllerAdvice replaces stack traces with structured JSON, and
  request bodies are validated with field-level messages.
* Records that belong to another user report 404, not 403, so ids cannot
  be probed for existence.
* Registration no longer honours role or active from the request body; a
  caller could otherwise register themselves as an administrator.