@@ -1,109 +1,100 @@
 package com.lokesh_codes.expense_tracker_backend.service;
 
+import java.util.List;
+
+import org.springframework.data.domain.Page;
+import org.springframework.data.domain.Pageable;
+import org.springframework.stereotype.Service;
+import org.springframework.transaction.annotation.Transactional;
+
+import com.lokesh_codes.expense_tracker_backend.DTO.PageResponse;
+import com.lokesh_codes.expense_tracker_backend.DTO.TransactionDTO;
+import com.lokesh_codes.expense_tracker_backend.DTO.TransactionFilter;
+import com.lokesh_codes.expense_tracker_backend.DTO.TransactionMapping;
+import com.lokesh_codes.expense_tracker_backend.entity.Category;
 import com.lokesh_codes.expense_tracker_backend.entity.Transaction;
 import com.lokesh_codes.expense_tracker_backend.entity.User;
+import com.lokesh_codes.expense_tracker_backend.exception.NotFoundException;
 import com.lokesh_codes.expense_tracker_backend.repository.TransactionRepository;
-import com.lokesh_codes.expense_tracker_backend.repository.UserRepository;
-import com.lokesh_codes.expense_tracker_backend.repository.CategoryRepository;
-import com.lokesh_codes.expense_tracker_backend.DTO.TransactionDTO;
-import com.lokesh_codes.expense_tracker_backend.DTO.TransactionMapping;
-import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.stereotype.Service;
-import org.springframework.security.core.context.SecurityContextHolder;
-import org.springframework.web.server.ResponseStatusException;
-import org.springframework.http.HttpStatus;
-
-import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 public class TransactionService {
 
-    @Autowired
-    private TransactionRepository transactionRepository;
+    private final TransactionRepository transactionRepository;
+    private final CategoryService categoryService;
+    private final CurrentUserService currentUser;
 
-    @Autowired
-    private UserRepository userRepository;
+    public TransactionService(TransactionRepository transactionRepository,
+            CategoryService categoryService,
+            CurrentUserService currentUser) {
+        this.transactionRepository = transactionRepository;
+        this.categoryService = categoryService;
+        this.currentUser = currentUser;
+    }
 
-    @Autowired
-    private CategoryRepository categoryRepository;
-
-    // Create a new transaction
-    public TransactionDTO createTransaction(TransactionDTO transactionDTO) {
-        User user = getCurrentUser();
-        var category = categoryRepository.findById(transactionDTO.getCategoryId())
-                .orElseThrow(() -> new RuntimeException("Category not found"));
+    @Transactional
+    public TransactionDTO createTransaction(TransactionDTO dto) {
+        User user = currentUser.require();
+        Category category = categoryService.requireOwned(dto.getCategoryId());
 
         Transaction transaction = new Transaction();
         transaction.setUser(user);
-        transaction.setCategory(category);
-        transaction.setDescription(transactionDTO.getDescription());
-        transaction.setAmount(transactionDTO.getAmount());
-        transaction.setCurrency(transactionDTO.getCurrency());
-        transaction.setDate(transactionDTO.getDate());
-        transaction.setPaymentMethod(transactionDTO.getPaymentMethod());
-        transaction.setComments(transactionDTO.getComments());
+        apply(transaction, dto, category);
 
-        Transaction savedTransaction = transactionRepository.save(transaction);
-        return TransactionMapping.toDTO(savedTransaction);
+        return TransactionMapping.toDTO(transactionRepository.save(transaction));
     }
 
-    // Update an existing transaction
-    public TransactionDTO updateTransaction(Integer id, TransactionDTO transactionDTO) {
-        var existingTransaction = transactionRepository.findById(id)
-                .orElseThrow(() -> new RuntimeException("Transaction not found"));
-        User currentUser = getCurrentUser();
-        if (!existingTransaction.getUser().getId().equals(currentUser.getId())) {
-            throw new ResponseStatusException(HttpStatus.FORBIDDEN, "Not authorized to update this transaction");
-        }
-        existingTransaction.setDescription(transactionDTO.getDescription());
-        existingTransaction.setAmount(transactionDTO.getAmount());
-        existingTransaction.setCurrency(transactionDTO.getCurrency());
-        existingTransaction.setDate(transactionDTO.getDate());
-        existingTransaction.setPaymentMethod(transactionDTO.getPaymentMethod());
-        existingTransaction.setComments(transactionDTO.getComments());
-
-        Transaction updatedTransaction = transactionRepository.save(existingTransaction);
-        return TransactionMapping.toDTO(updatedTransaction);
+    @Transactional
+    public TransactionDTO updateTransaction(Integer id, TransactionDTO dto) {
+        Transaction transaction = requireOwned(id);
+        Category category = categoryService.requireOwned(dto.getCategoryId());
+        apply(transaction, dto, category);
+        return TransactionMapping.toDTO(transactionRepository.save(transaction));
     }
 
-    // Delete a transaction
+    @Transactional
     public void deleteTransaction(Integer id) {
-        var existingTransaction = transactionRepository.findById(id)
-                .orElseThrow(() -> new RuntimeException("Transaction not found"));
-        User currentUser = getCurrentUser();
-        if (!existingTransaction.getUser().getId().equals(currentUser.getId())) {
-            throw new ResponseStatusException(HttpStatus.FORBIDDEN, "Not authorized to delete this transaction");
-        }
-        transactionRepository.delete(existingTransaction);
+        transactionRepository.delete(requireOwned(id));
     }
 
-    // Get transaction by ID
+    @Transactional(readOnly = true)
     public TransactionDTO getTransactionById(Integer id) {
-        var transaction = transactionRepository.findById(id)
-                .orElseThrow(() -> new RuntimeException("Transaction not found"));
-        User currentUser = getCurrentUser();
-        if (!transaction.getUser().getId().equals(currentUser.getId())) {
-            throw new ResponseStatusException(HttpStatus.FORBIDDEN, "Not authorized to view this transaction");
-        }
-        return TransactionMapping.toDTO(transaction);
+        return TransactionMapping.toDTO(requireOwned(id));
     }
 
-    // Get all transactions
-    public List<TransactionDTO> getAllTransactions() {
-        User currentUser = getCurrentUser();
-        List<Transaction> transactions = transactionRepository.findByUser_Id(currentUser.getId());
-        return transactions.stream()
+    /** Filtered, sorted and paged search, evaluated in the database. */
+    @Transactional(readOnly = true)
+    public PageResponse<TransactionDTO> search(TransactionFilter filter, Pageable pageable) {
+        Page<Transaction> page = transactionRepository.findAll(
+                TransactionSpecifications.forUser(currentUser.requireId(), filter), pageable);
+        return PageResponse.from(page, TransactionMapping::toDTO);
+    }
+
+    /**
+     * Every matching transaction, unpaged. Used for CSV export and by the
+     * dashboard, which aggregates over a whole period.
+     */
+    @Transactional(readOnly = true)
+    public List<TransactionDTO> findAll(TransactionFilter filter) {
+        return transactionRepository
+                .findAll(TransactionSpecifications.forUser(currentUser.requireId(), filter))
+                .stream()
                 .map(TransactionMapping::toDTO)
-                .collect(Collectors.toList());
+                .toList();
     }
 
-    private User getCurrentUser() {
-        var auth = SecurityContextHolder.getContext().getAuthentication();
-        if (auth == null || auth.getName() == null) {
-            throw new ResponseStatusException(HttpStatus.UNAUTHORIZED, "Unauthorized");
-        }
-        return userRepository.findByUsername(auth.getName())
-                .orElseThrow(() -> new ResponseStatusException(HttpStatus.UNAUTHORIZED, "User not found"));
+    private void apply(Transaction transaction, TransactionDTO dto, Category category) {
+        transaction.setCategory(category);
+        transaction.setDescription(dto.getDescription().trim());
+        transaction.setAmount(dto.getAmount());
+        transaction.setCurrency(dto.getCurrency().toUpperCase());
+        transaction.setDate(dto.getDate());
+        transaction.setPaymentMethod(dto.getPaymentMethod());
+        transaction.setComments(dto.getComments());
+    }
+
+    private Transaction requireOwned(Integer id) {
+        return transactionRepository.findByIdAndUser_Id(id, currentUser.requireId())
+                .orElseThrow(() -> new NotFoundException("Transaction not found"));
     }
 }
